# stream-clipper-ai-helper

./: .gitignore  README.en.md  README.ja.md  README.md  pyproject.toml
stream_clipper/: __init__.py  analyzer.py  cli.py  pipeline.py  reader.py  video.py
stream_clipper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  generate_test_assets.py  test_pipeline.py
