[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stream-clipper"
version = "0.1.0"
description = "配信アーカイブからチャットの盛り上がりを検知して自動で切り抜きを行うCLIツール"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "pandas>=1.3.0",
    "numpy>=1.20.0",
]

[project.scripts]
stream-clipper = "stream_clipper.cli:main"
